test/visibility/private/uses/accessOnly.good
accessOnly.chpl:3: error: 'b' undeclared (first use this function)
