test/visibility/private/uses/accessOnly.chpl
use M;

writeln(b);
// Ensures that only lists doesn't break the privacy of the use.  I shouldn't
// be able to see 'b'
writeln("from accessOnly");
